tests/suite/fail/generated/types/fail_sub_string_i32.ny
fn main() {
    let _ = "a" - 1 //~ ERROR type mismatch in `subtraction` operation
}
